--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="desktop.css" media="(min-width: 370px)">
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
