Fix desktop layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <article class="product-card">
+    <article role="main" class="product-card">
       <picture>
         <source media="(min-width: 370px)" srcset="images/image-product-desktop.jpg">
         <img class="product-card__image" src="images/image-product-mobile.jpg" 
