--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
              alt="Gabrielle Essence Eau De Parfum">
       </picture>
       <section class="product-card__info">
-        <header>
+        <header role="banner">
           <h1 class="product-card__title">Perfume</h1>
           <h2 class="product-card__subtitle">Gabrielle Essence Eau De
             Parfum</h2>
         </header>
-        <p class="product-card__description">
+        <p role="text" class="product-card__description">
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
