--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="mobile.css">
-    <link rel="stylesheet" href="desktop.css" media="(min-width: 370px)">
+    <link rel="stylesheet" href="desktop.css" media="(min-width: 728px)">
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
     <article role="main" class="product-card">
-      <picture>
-        <source media="(min-width: 370px)" srcset="images/image-product-desktop.jpg">
-        <img class="product-card__image" src="images/image-product-mobile.jpg" 
+      <picture class="product-card__image">
+        <source media="(min-width: 728px)" srcset="images/image-product-desktop.jpg">
+        <img  src="images/image-product-mobile.jpg" 
              alt="Gabrielle Essence Eau De Parfum">
       </picture>
       <section class="product-card__info">
         <header role="banner">
-          <h1 class="product-card__title">Perfume</h1>
-          <h2 class="product-card__subtitle">Gabrielle Essence Eau De
+          <h1 class="product-card__title montserrat">Perfume</h1>
+          <h2 class="product-card__subtitle fraunces-bold">Gabrielle Essence Eau De
             Parfum</h2>
         </header>
-        <p role="text" class="product-card__description">
+        <p role="text" class="product-card__description montserrat">
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
         <div class="product-card__price">
-          <span class="product-card__price--discounted">$149.99</span>
-          <del class="product-card__price--original">$169.99</del>
+          <span class="product-card__price--discounted fraunces-bold">$149.99</span>
+          <del class="product-card__price--original montserrat">$169.99</del>
         </div>
         <button class="product-card__button">
           <img src="images/icon-cart.svg" alt="Shopping cart icon"> Add to Cart
